# spotify_sentiment_analysis

./: .gitignore  README.md  pyproject.toml  shell.nix  spot_analyze.py
