[tool.poetry]
name = "spotify-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["jzbor <jzbor@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
matplotlib = "^3.8.0"
alive-progress = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
